Revert "all: fix icon flickering (#54)" (#55)
This reverts commit f66009bf78c781a4c8ee62ed19caa9b6cc2ec3ca.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -319,10 +319,6 @@ li {
   margin-top: -1rem;
 }
 
-.icon-container {
-  display: inline;
-}
-
 .icon {
   width: 24px;
   height: 24px;
